--- a/server/views/chat.jade
+++ b/server/views/chat.jade
@@ -118,7 +118,7 @@ html
             button#add Add group
             button#add2 Add Recieved
             .logo
-              a(href='Home')
+              a(href='/home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content  
