--- a/server/views/prof_questions.jade
+++ b/server/views/prof_questions.jade
@@ -92,7 +92,8 @@ html
                     hr(id='no_margin_line_break')
                     p.text-center 
                       small 
-                        small QUESTION STATUS
+                        small 
+                          small QUESTION STATUS:
                     
                     // IF THE QUESTION COUNT ISNT 0
                     // THEN YOU CAN CHECK THE QUESTIONS
