--- a/server/views/queues.jade
+++ b/server/views/queues.jade
@@ -94,7 +94,7 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='/home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
         #content
@@ -119,23 +119,6 @@ html
                     h3.text-center #{names.name}
                     h4.text-center Available: No
 
-
-          .d-flex.justify-content-center.h-100
-            .card
-              img(src='/images/choc-donut.png' alt='Avatar')
-              hr
-              .cardContainer
-                h3.text-center Name
-                h4.text-center Statistics
-                p.text-center Assistant Professor
-
-            .card
-              img(src='/images/jelly-donut.png' alt='Avatar')
-              hr
-              .cardContainer
-                h3.text-center Erwin Pascual
-                h4.text-center Computer Science
-                p.text-center Unemployed
     .overlay
 
     script(type='text/javascript' src='/javascripts/google.js' async='' defer='')
