--- a/server/public/stylesheets/courses.css
+++ b/server/public/stylesheets/courses.css
@@ -49,10 +49,11 @@ a:focus {
     color: #FCA926;
     text-shadow: 0px 1px 2px rgb(197, 161, 119)
 }
-#courseCard {
+
+.card {
     margin: 10px;
     padding: 10px;
-    width: 200px;
+    width: 450px;
     background-color: #252525;
     box-shadow: 0 2px 4px 0 rgba(211,211,211,0.2);
     transition: 0.3s;
@@ -71,4 +72,14 @@ a:focus {
     box-shadow: 0 0px 8px 0 #FCA926;
 }
 
+.title_container {
+    height: 80px;
+}
 
+#card_text{
+    font-size: 18px;
+}
+
+#cardOptions{
+    font-size: 16px;
+}
