--- a/server/views/courses.jade
+++ b/server/views/courses.jade
@@ -127,7 +127,7 @@ html
                       small 
                         small COURSE OPTIONS
                   .cardContainer(id='cardOptions')
-                    a.btn.btn-primary.btn-block.btn-lg(href='#') Questions Overview
+                    a.btn.btn-primary.btn-block.btn-lg(href='/questions_asked') Questions Overview
                     hr#invisible_line_break
                     a.btn.btn-danger.btn-block.btn-lg(href='professors/'+courses.course_name id='available_prof_button') Check Available Professors
     .overlay
