--- a/server/views/questions.jade
+++ b/server/views/questions.jade
@@ -101,7 +101,7 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='/home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
 
