--- a/server/views/schedule.jade
+++ b/server/views/schedule.jade
@@ -11,7 +11,7 @@ html
     // 4 - FAVICON LINK
     link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous')
     link(rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css' integrity='sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl' crossorigin='anonymous')
-    link(rel='stylesheet' href='/stylesheets/professors.css')
+    link(rel='stylesheet' href='/stylesheets/schedule.css')
     link(rel='icon' type='image/png' href='/images/donut.png')
 
     // 1 - FONT AWESOME SCRIPT
@@ -47,7 +47,7 @@ html
         hr
         ul.list-unstyled.components
           li
-            a(href='home')
+            a(href='/home')
               i.fas.fa-home
               | Home
           li.active
@@ -56,7 +56,7 @@ html
               | Courses
               ul#coursesSubmenu.collapse.list-unstyled
                 li
-                  a(href='courses') Current Courses
+                  a(href='/courses') Current Courses
                 li
                   a(href='#') Search Courses
           li.active
@@ -65,11 +65,11 @@ html
               | Questions
               ul#questionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='questions') Ask a Question
+                  a(href='/questions') Ask a Question
                 li
-                  a(href='questions_search') Search Questions
+                  a(href='/questions_search') Search Questions
                 li
-                  a(href='questions_asked') Asked Questions
+                  a(href='/questions_asked') Asked Questions
           li
             a(href='professors')
               i.fas.fa-chalkboard-teacher
@@ -80,13 +80,13 @@ html
               | Discussions
               ul#discussionsSubmenu.collapse.list-unstyled
                 li
-                  a(href='discussions') Discussion Board
+                  a(href='/discussions') Discussion Board
                 li
-                  a(href='chat') Group Chats
+                  a(href='/chat') Group Chats
         hr
         ul.list-unstyled.components
           li
-            a(href='settings')
+            a(href='/settings')
               i.fas.fa-cog
               | Settings
           li
@@ -100,23 +100,27 @@ html
             a#sidebarCollapse(href='#')
               i.fas.fa-bars
             .logo
-              a(href='Home')
+              a(href='/home')
                 img(src='/images/maple-donut-logo.png')
             a(href='#')
       #content
-        h3.text-center Schedule for #{locals.teacher}
-
-        hr
-        .d-flex.justify-content-center
-        .searchResultContainer
-          if locals.data != Null
-            for session in locals.data
-              .card
-                .cardContainer
-                    h4.text-center #{session.label}
-                    h4.text-center #{session.course_name}
+        #courseContainer
+          h1.text-center Labels/Tags for #{locals.teacher}
+          hr
+          .d-flex.justify-content-center
+            if locals.data != Null
+              for session in locals.data
+                .card(id='courseCard')
+                  h3.text-center #{session.label}
+                  .title_container(id='cardTitle')
+                    p(id='card_text').text-center  #{session.course_name}
+                  hr(id='no_margin_line_break')
+                  p(id='no_margin_paragraph').text-center 
+                    small 
+                      small 
+                        small COURSE OPTIONS
+                  .cardContainer(id='cardOptions')
                     a.btn.btn-primary.btn-block.btn-lg(href='/'+locals.teacher+'/'+session.label) View Questions
-                    a.btn.btn-primary.btn-block.btn-lg(href='https://us05web.zoom.us/s/81138724882?pwd=NmtNTGExdFZaVGdKOXlDYW4xWjUvdz09') Zoom Link
-
-
+                    a.btn.btn-danger.btn-block.btn-lg(href='https://us05web.zoom.us/s/81138724882?pwd=NmtNTGExdFZaVGdKOXlDYW4xWjUvdz09') Zoom Link
+                      i.fas.fa-video.fa-fw 
     .overlay
