--- a/server/views/schedule.jade
+++ b/server/views/schedule.jade
@@ -105,14 +105,23 @@ html
             a(href='#')
       #content
         #courseContainer
-          h1.text-center Labels/Tags for #{locals.teacher}
+          h1.text-center #{locals.teacher}
+          h4.text-center Labels/Tags used for Questions Asked:
           hr
           .d-flex.justify-content-center
             if locals.data != Null
               for session in locals.data
                 .card(id='courseCard')
+                  p(id='no_margin_paragraph').text-center 
+                    small 
+                      small LABEL:
                   h3.text-center #{session.label}
+                  hr
                   .title_container(id='cardTitle')
+                    p(id='no_margin_paragraph').text-center 
+                    small 
+                      small 
+                        small COURSE:
                     p(id='card_text').text-center  #{session.course_name}
                   hr(id='no_margin_line_break')
                   p(id='no_margin_paragraph').text-center 
@@ -120,7 +129,7 @@ html
                       small 
                         small COURSE OPTIONS
                   .cardContainer(id='cardOptions')
-                    a.btn.btn-primary.btn-block.btn-lg(href='/'+locals.teacher+'/'+session.label) View Questions
+                    a.btn.btn-primary.btn-block.btn-lg(href='/schedule/'+locals.teacher+'/'+session.label) View Questions
                     a.btn.btn-danger.btn-block.btn-lg(href='https://us05web.zoom.us/s/81138724882?pwd=NmtNTGExdFZaVGdKOXlDYW4xWjUvdz09') Zoom Link
                       i.fas.fa-video.fa-fw 
     .overlay
